[package]
name = "my_rust_study"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Arithmetic_Operator"
path = "src/Arithmetic_Operator.rs"

[[bin]]
name = "Comparison_Operator"
path = "src/Comparison_Operator.rs"

[[bin]]
name = "Logical_Operators"
path = "src/Logical_Operators.rs"

[[bin]]
name = "Assignment_Operators"
path = "src/Assignment_Operators.rs"

[[bin]]
name = "Bitwise_Operators"
path = "src/Bitwise_Operators.rs"

[[bin]]
name = "Special_Operators"
path = "src/Special_Operators.rs"

[[bin]]
name = "if_keyword"
path = "src/if_keyword.rs"

[[bin]]
name = "else_keyword"
path = "src/else_keyword.rs"

[[bin]]
name = "match_keyword"
path = "src/match_keyword.rs"

[[bin]]
name = "if_let_keyword"
path = "src/if_let_keyword.rs"

[[bin]]
name = "in_keyword"
path = "src/in_keyword.rs"

[[bin]]
name = "where_keyword"
path = "src/where_keyword.rs"

[dependencies]
